# Industrial_Cpp

./: .gitignore  CMakeLists.txt  orig_and_main.tar.xz  readme.md
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  funcs.cpp  funcs.h
test/integr/: tests
test/unit/: CMakeLists.txt  test_funcs.cpp
